<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/rounded_border_white_bg"


    >


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/main_logo"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:text="@string/heading_forgot_passowrd"
                style="@style/TextBlackBold"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                />



            <EditText
                android:id="@+id/forgotpassword_txt"
                android:hint="@string/enter_user_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"


                android:layout_below="@+id/main_logo"
                android:layout_marginTop="50dp"

                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:weightSum="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/forgotpassword_txt">
            <Button
                android:id="@+id/forgotpassword_cancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                style="@style/ButtonBlackFilled"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/forgotpassword_done"
                android:text="@string/done"
                android:layout_width="0dp"
                android:layout_weight="1"

                style="@style/ButtonGreenFilled"


                android:layout_marginBottom="10dp"
                />
</LinearLayout>
        </RelativeLayout>

</RelativeLayout>

