<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/background_login"


    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/main_logo"

                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:text=""
                android:background="@drawable/logo"

                style="@style/TextStyleForLogo"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                />



            <Button
                android:id="@+id/main_btn_signup"
                android:text="@string/signup"
                android:layout_width="fill_parent"


                style="@style/ButtonBlackFilled"
                android:layout_below="@+id/main_logo"
                android:layout_marginTop="50dp"

                />





            <TextView
                android:id="@+id/main_txt_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_btn_signup"

                android:layout_centerHorizontal="true"

                android:text="@string/txt_link_already_account"
                style="@style/TextWhiteBold"
                android:layout_marginTop="40dp"
                />

            <Button
                android:id="@+id/main_btn_login"
                android:text="@string/btn_login"
                android:layout_width="fill_parent"


                style="@style/ButtonGreenFilled"

                android:layout_below="@+id/main_txt_already_have_account"
                android:layout_marginBottom="10dp"
                 />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

